--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,8 +3,7 @@
     "baseUrl": "./",
     "types": ["vite/client"],
     "paths": {
-      "@app/*": ["src/app/*"],
-      "src/*": ["src/*"]
+      "@app/*": ["src/*"]
     },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
